without dev dependencies

--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^1.0.3"
-  },
-  "devDependencies": {
+    "@vue/test-utils": "^1.0.3",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -40,5 +38,6 @@
     "eslint-plugin-vue": "^6.2.2",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "devDependencies": {}
 }
